Add session records